--- a/player.html
+++ b/player.html
@@ -36,7 +36,9 @@
                 <h4 class="player-name">player - 4</h4>
                 <p>Saepe ab minus deserunt nisi repellat commodi voluptatibus natus odio, explicabo, sapiente voluptates a repellendus ut nobis dolores nemo exercitationem aliquam at quasi libero dolorum iure, totam quaerat! Neque, illo.</p>
             </div>
+           
         </section>
+        <button onclick="addPlayer()">Add Player</button>
     </main>
     <script src="js/players.js"></script>
 </body>
